<resources>
    <string name="app_name">DiceGame</string>
    <string name="title">Dice Game</string>
    <string name="logout">LOGOUT</string>
    <string name="logged_out">Logged out</string>
    <string name="register">REGISTER</string>
    <string name="login">LOG IN</string>
    <string name="hello">Hello</string>
    <string name="settings">SETTINGS</string>
    <string name="password">password:</string>
    <string name="email">email:</string>
    <string name="createName">CREATE</string>
    <string name="authentication_error">Authentication Error - Check your username and password.</string>
    <string name="email_in_use_error">This email is already in use.</string>
    <string name="wrong_email_error">Incorrect email format. Please try again.</string>
    <string name="password_error">Password must be at least 6 characters long.</string>
    <string name="empty_field_error">Please complete all required fields.</string>
    <string name="username_in_use_error">This username is already in use.</string>
    <string name="registration_successful">Registration successful!</string>
    <string name="connection_error">Please check your internet connection or try again later.</string>
    <string name="set_username">What is your username?</string>
    <string name="username_length_error">Name must have a length between 3 and 10 characters.</string>
    <string name="sounds">Sounds</string>
    <string name="combinations_highlight">Combinations Highlighter</string>
    <string name="cross_out_confirmation">Cross out confirmation</string>
    <string name="show_combinations_chart">Combinations chart</string>
    <string name="player_one">PLAYER 1</string>
    <string name="player_two">PLAYER 2</string>
    <string name="player_three">PLAYER 3</string>
    <string name="player_four">PLAYER 4</string>
    <string name="player_five">PLAYER 5</string>
    <string name="player_six">PLAYER 6</string>
    <string name="name">Name:</string>
    <string name="start">START</string>
    <string name="ones">Ones</string>
    <string name="twos">Twos</string>
    <string name="threes">Threes</string>
    <string name="fours">Fours</string>
    <string name="fives">Fives</string>
    <string name="sixes">Sixes</string>
    <string name="pair">Pair</string>
    <string name="two_pairs">Two Pairs</string>
    <string name="evens">Evens</string>
    <string name="odds">Odds</string>
    <string name="small_straight">Small Straight</string>
    <string name="large_straight">Large Straight</string>
    <string name="full_house">Full House</string>
    <string name="four_of_a_kind">Four of a Kind</string>
    <string name="five_of_a_kind">Five of a Kind</string>
    <string name="SOS">SOS</string>
    <string name="score">Score</string>
    <string name="points_value">"%1$d pkt"</string>
    <string name="content_description">android:contentDescription="@null"</string>
    <string name="two_players">2 players</string>
    <string name="three_players">3 players</string>
    <string name="four_players">4 players</string>
    <string name="five_players">5 players</string>
    <string name="six_players">6 players</string>
    <string name="hotseat">HOTSEAT</string>
    <string name="multiplayer">MULTIPLAYER</string>
    <string name="single_player">SINGLE PLAYER</string>
    <string name="training">TRAINING</string>
    <string name="play">PLAY</string>
    <string name="back">BACK</string>
    <string name="next">NEXT</string>
    <string name="you_won">YOU WON!</string>
    <string name="you_lost">YOU LOST!</string>
    <string name="the_winner_is">"The winner is %1$s !"</string>
    <string name="winnerRankingPoint">"+1 Ranking point! \n Your ranking: %1$d points!"</string>
    <string name="loserRankingPoint">"-1 Ranking point! \n Your ranking: %1$d points!"</string>
    <string name="playerResult">"%1$s \n \n %2$s </string>
    <string name="draw">DRAW !</string>
    <string name="exit">EXIT</string>
    <string name="exit_game">Exit game</string>
    <string name="X">X</string>
    <string name="exit_game_confirmation">Are you sure you want to quit the game?</string>
    <string name="rematch">REMATCH</string>
    <string name="offline_mode">OFFLINE MODE</string>
    <string name="playerName_mainMenu">Player name:</string>
    <string name="totalGames_mainMenu">Games:</string>
    <string name="winGames_mainMenu">Win:</string>
    <string name="drawGames_mainMenu">Draw:</string>
    <string name="lostGames_mainMenu">Lost:</string>
    <string name="rankingPoints_mainMenu">Ranking points:</string>
    <string name="rankingPosition_mainMenu">Ranking position:</string>
    <string name="opponent_search">Searching for opponent…</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="combinations_chart_exit">RETURN</string>
    <string name="cross_out_combination_question">"Are you sure yo want to cross out\n%1$s ?"</string>
    <string name="no_requirements">NO REQUIREMENTS</string>
    <string name="training_text_1">"Welcome to the Dice game!\nThis tutorial will introduce you to the rules of the game, and show you valuable tips that will increase your chances of winning!"</string>
    <string name="training_text_2">"The aim of the game is to score more points than your opponent. Points are scored by completing combinations visible on the left side of the screen."</string>
    <string name="training_text_3">"A combination can only be completed once. Once a combination has been scored it cannot be changed, so it is important to think through every move as it can determine the final result!"</string>
    <string name="training_text_4">"Now take a look at a combinations chart. Remember that you can use it at any time during the game. All you have to do is select 'Combinations chart' in the game options."</string>
    <string name="training_text_5">"Note that combinations 1 to 6 and Small Street and Big Street require exactly the same values as shown in the list. Other combinations only require specific criteria to be met, in which case the values may differ."</string>
    <string name="training_text_6">"For example, Full House requires you to roll 3 dice of one value and 2 of another.Both 3 1s and 2 2s and 3 2s and 2 1s meet these criteria."</string>
    <string name="training_text_7">"Small Street requires dice with values: 1,2,3,4,5 Large Street: 2,3,4,5,6 In both cases the values cannot be repeated. Four of a kind requires 4 dice of equal value.  A Five of a kind requires 5 dice of equal value and is the most difficult combination to roll."</string>
    <string name="training_text_8">"SOS is a specific combination. It has no criteria and can be used with any combination, but only after the last roll."</string>
    <string name="training_text_9">"It is worth using SOS if after last roll you have not managed to get any combination. You should also consider this step if the score obtained in another combination is very low, especially if we are talking about a combination with much better scoring possibilities."</string>
    <string name="training_text_10">"For example: if after last roll the only combination you have is a pair of ones (giving 2 points), you should consider using SOS and give yourself a chance to roll a much better pair in the next turns. Remember: like any combination, SOS can be used only once!"</string>
    <string name="training_text_11">"Let's move on to the rules of scoring. Points are counted only after adding up the dice REQUIRED IN THE CRITERIA OF A COMBINATION. If you roll a pair of 6's, a five, a four and a three, then points for a Pair  will be counted ONLY from the sixes. The other dice will be ignored."</string>
    <string name="training_text_12">"Another thing to remember is the "First Roll Rule". If you finish a combination after making only one roll, the points scored will be doubled! So be careful, because making a second roll can take away a lot of points from the first roll."</string>
    <string name="training_text_13">"You have 16 turns at our disposal. Each turn consists of 3 smaller turns in which you roll five dice. Remember: usually before the second and a thirdAttention: usually before the second and third roll there are some dice you would like to keep in order to obtain a particular combination. In order to do that, you need to mark the dice you want to roll again."</string>
    <string name="training_text_14">"Once selected, dice will be surrounded by a purple border. The other dice will not participate in the re-roll. If you want to roll all the dice, simply press the dice roll. You don't need to select them all."</string>
    <string name="training_text_15">"For training purposes, some functions in the game options have been disabled and game interface modified. Enough theory. It's time for practice! Make your first roll!"</string>
    <string name="training_text_16">"You rolled Fours on the first roll! This means that your points will be doubled. Except in certain situations it is advisable to use the combination scored on the first roll."</string>
    <string name="training_text_17">"Note that highlighting of available combinations is enabled by default. This can be helpful especially for new players. You can disable this feature at any time in the game options. Now score the Fours!"</string>
    <string name="training_text_18">"Good! You have scored 24 points. The dice required for the combination have been added up, and since you scored the combination after one roll, the score has been doubled. Let's see what you can roll this time. Roll the dice!"</string>
    <string name="training_text_19">"You rolled One Pair on your first roll. Hold off on scoring this combination though, as it only gives you 8 points."</string>
    <string name="training_text_20">"One Pair is the easiest combination to roll and you will certainly be able to roll a much stronger one in subsequent turns. So it is not worth wasting it."</string>
    <string name="training_text_21">"Let's try to hunt for Twos. You need one more, and you have two rolls in front of you, so the chances are good. Mark all the dice except the twos and then make a second roll."</string>
    <string name="training_text_22">"This roll has definitely improved your situation! You were planning on scoring Twos, but now you have five combinations available! These moments happen quite often, remember to react accordingly."</string>
    <string name="training_text_23">"Now let's decide which combination to choose. In a situation where you have many combinations to choose from, it is advisable to choose the one that is the most difficult to roll. In this case, it's Full House. Get this combination!"</string>
    <string name="training_text_24">"Good. Time to complicate things a bit!"</string>
    <string name="training_text_25">"As you can see, you have two combinations left to score. You also have an unused SOS at your disposal in case you don't manage to roll either of them. Let's try it! Roll the dice!"</string>
    <string name="training_text_26">"You need Four of a kind and Five of a kind. So you need to roll at least four identical dice. In this situation you will try the sixes. Mark all the dice except the sixes and roll again."</string>
    <string name="training_text_27">"Just one more six. Third time lucky!"</string>
    <string name="training_text_28">"Bad luck. Fortunately, you have unused SOS, so you don't have to cross out another combination. Use SOS."</string>
    <string name="training_text_29">"As you can see in the case of SOS the points from all dice are counted. Sometimes it is worth considering to cross out a low scoring combination (Ones), or a very difficult combination (Five of a kind), instead of using SOS with low score."</string>
    <string name="training_text_30">"Now let's try out another scenario!"</string>
</resources>